Development
    Fix problem with window size being wrong when video started with playlist open
    Fix VCD loading, parse them as a playlist
    If cover.jpg or Folder.jpg exist in same folder and song file, load it as cover art
    Patch from Onur to fix segfault when theme is missing icons
    Make Bold and Italic work better in Subtitle font
    Fix problem with default auto_hide value when not using gconf
    Update the Makefiles to work with the libraries
    Only load key from key file if it exists already
    Cleanup display when media is not seekable
    Have tracker expand when wide text is displayed
    Corrected crasher in recent menu, however this now requires GIO to work correctly
    Fixed meter and details display when combined with playlist
    Hook I key to show display_name when in fullscreen mode
    Prevent invalid memory accesses
    Move map/unmap code back to the main thread
    Add thumb position option to widget
    Use more bars in meter, fix some drawing issues in the meter
    Fix some problems with the media tracker drawing code
    Change audio meter calcs
    Addition of the new Media Tracker to replace the old progress bar
    Addition of the Audio Meter Widget
0.9.5
    For vdpau, fall back to vdpau, xv or x11 if we can't find the right codec
    For xvmc, fall back to xv or x11 if we can't find the right codec
    If we are given an mms:// url and it doesn't work try as mmshttp:// url
    Try http urls are mmshttp urls and fall back if nothing opens to http urls
	Patch to fix a site, but code still commented out.
	Updated Korean, Japanese, Serbian and Turkish translations
    Updated Polish translation
    Have < go to the previous item on the playlist and > to the next
    Removed Roberto's translation due to personality conflicts, reverting
    New Spanish translation from Roberto DMD
    Added Polish translation to the .desktop file
    Speed up channel loading
    Updated French translation from Starcrasher